syntax = "proto2";

option php_namespace = "Protos";
option php_metadata_namespace = "Protos\\Metadata";

package acs.tablestore.row;

import "tablestore.proto";

message TimeRange {
  optional int64 start_time = 1;
  optional int64 end_time = 2;
  optional int64 specific_time = 3;
}

message Condition {
  required RowExistenceExpectation row_existence = 1;
  optional bytes column_condition = 2;
}

enum RowExistenceExpectation {
  IGNORE = 0;
  EXPECT_EXIST = 1;
  EXPECT_NOT_EXIST = 2;
}

message ReturnContent {
  optional ReturnType return_type = 1;
  repeated string return_column_names = 2;
}

enum ReturnType {
  RT_NONE = 0;
  RT_PK = 1;
  RT_AFTER_MODIFY = 2;
}

message ConsumedCapacity {
  required CapacityUnit capacity_unit = 1;
}
